<resources>
    <string name="app_name">MaximContacts</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="app_title">Контактная книга</string>
    <string name="login_edittext_hint">Логин</string>
    <string name="password_edittext_hint">Пароль</string>
    <string name="auth_button_hint">Войти</string>
    <string name="progressbar_hint">Загрузка данных</string>
    <string name="root_department_name">Главный департамент</string>
    <string name="employee_example_name">Иванов Петр Сидорович Римский Корсаков Лорем Ипсум</string>
    <string name="employee_title_title">Должность</string>
    <string name="employee_email_title">Email</string>
    <string name="employee_phone_title">Телефон</string>
    <string name="department_current_name_example">Длинное - предлинное имя департамента образования молодежи игре на старом баяне</string>


    <string name="menu_exit">Выход</string>
    <string name="login_login">test_user</string>
    <string name="login_pass">test_pass</string>
    <string name="toast_empty_auth">Логин и пароль не должны быть пустыми</string>
    <string name="toast_auth_success">Вход выполнен. Данные сохранены</string>
    <string name="toast_auth_failed">Неправильный логин или пароль</string>
</resources>
