<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".LoginFragment">

    <TextView
        android:id="@+id/app_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:layout_marginTop="@dimen/margin_double"
        android:text="@string/app_title"
        android:textSize="@dimen/app_title_text_size" />

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_double"
        app:layout_constraintTop_toBottomOf="@id/app_title"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"

        >

        <EditText
            android:id="@+id/login_edittext"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:hint="@string/login_edittext_hint"
            android:inputType="text"
            android:text="@string/login_login"
            android:textSize="27sp" />

        <EditText
            android:id="@+id/password_edittext"
            android:layout_width="300dp"
            android:layout_height="50dp"
            android:layout_marginTop="@dimen/margin_single"
            android:hint="@string/password_edittext_hint"
            android:inputType="textPassword"
            android:text="@string/login_pass"
            android:textSize="27sp" />

        <Button
            android:id="@+id/auth_button"
            android:layout_width="300dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_single"
            android:text="@string/auth_button_hint"
            android:textSize="20sp" />

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>